[tool.poetry]
name = "pytorch-diff-checkpoint"
version = "0.1.1"
description = "A PyTorch helper library designed to save only the changes in a fine-tuned base model."
authors = ["Richard Löwenström <samedii@gmail.com>"]
readme = "README.md"
packages = [{include = "diff_checkpoint"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
numpy = "^2.0.1"
torchvision = "^0.19.0"
markdown = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
